# ali

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  ROADMAP.md  pyproject.toml
src/ali/: __init__.py  cli.py  executor.py  scripts.py
src/ali/core/: __init__.py  expansion.py  logging.py  parser.py  plugin.py  registry.py  resolver.py  router.py  rules.py
src/ali/plugins/broot/: plugin.yaml
src/ali/plugins/micro/: plugin.yaml
src/ali/plugins/tmux/: plugin.py  plugin.yaml
src/ali/plugins/tmux/scripts/: distribute.py
src/tal/: cli.py
src/tal/core/: __init__.py  expansion.py  parser.py  plugin.py  router.py
src/tal/plugins/tmux/: plugin.yaml
src/tal_tool/: __init__.py
